<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="arena"
            type="com.cathay.banc.taipei.zoo.entity.Arena" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"

            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"

            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"

            app:layout_constraintGuide_percent="0.8" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/block_seam"
            android:layout_marginTop="@dimen/block_seam"
            android:layout_marginBottom="@dimen/block_seam_half"
            android:src="@{arena.EPicUrl}"

            app:layout_constraintBottom_toTopOf="@id/guidelineH1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:src="@drawable/cordova_ios_72" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="@dimen/block_seam"
            android:paddingVertical="@dimen/block_seam_half"
            android:text="@{arena.EInfo}"

            app:layout_constraintBottom_toTopOf="@id/guidelineH2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineH1"

            tools:text="@string/testing_description" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="@dimen/block_seam"
            android:paddingVertical="@dimen/block_seam_half"
            android:text="@{arena.EMemo}"

            app:layout_constraintBottom_toTopOf="@id/tvCategory"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@id/guidelineH2"

            tools:text="@string/testing_info" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="@dimen/block_seam"
            android:paddingTop="@dimen/block_seam_half"
            android:paddingBottom="@dimen/block_seam"
            android:text="@{arena.ECategory.name()}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@id/tvInfo"

            tools:text="@string/testing_category" />

        <TextView
            android:id="@+id/tvOuterLink"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/arena_detail_hyperlink_label"
            android:textColor="@android:color/holo_blue_light"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guidelineV1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineH2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
