<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <variable
            name="plant"
            type="com.cathay.banc.taipei.zoo.entity.Plant" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAliasLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/block_seam"
            android:text="@string/plant_label_alias"
            android:textStyle="bold"
            android:typeface="serif"

            app:layout_constraintBottom_toTopOf="@id/tvAlias"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAlias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{plant.FAlsoKnown}"

            app:layout_constraintBottom_toTopOf="@id/tvBriefLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAliasLabel" />

        <TextView
            android:id="@+id/tvBriefLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/block_seam"
            android:text="@string/plant_label_brief"
            android:textStyle="bold"
            android:typeface="serif"

            app:layout_constraintBottom_toTopOf="@id/tvBrief"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAlias" />

        <TextView
            android:id="@+id/tvBrief"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{plant.FBrief}"

            app:layout_constraintBottom_toTopOf="@id/tvFeatureLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBriefLabel" />

        <TextView
            android:id="@+id/tvFeatureLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/block_seam"
            android:text="@string/plant_label_feature"
            android:textStyle="bold"
            android:typeface="serif"

            app:layout_constraintBottom_toTopOf="@id/tvFeature"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBrief" />

        <TextView
            android:id="@+id/tvFeature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{plant.FFeature}"

            app:layout_constraintBottom_toTopOf="@id/tvFunctionApplicationLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFeatureLabel" />

        <TextView
            android:id="@+id/tvFunctionApplicationLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/block_seam"
            android:text="@string/plant_label_function_application"
            android:textStyle="bold"
            android:typeface="serif"

            app:layout_constraintBottom_toTopOf="@id/tvFunctionApplication"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFeature" />

        <TextView
            android:id="@+id/tvFunctionApplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{plant.FFunctionAndApplication}"

            app:layout_constraintBottom_toTopOf="@id/tvUpdateDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFunctionApplicationLabel" />

        <TextView
            android:id="@+id/tvUpdateDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/block_seam"
            android:paddingRight="@dimen/block_seam_half"
            android:text="@string/plant_label_update"
            android:textStyle="bold"
            android:typeface="serif"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tvUpdateDate"
            app:layout_constraintTop_toBottomOf="@id/tvFunctionApplication" />

        <TextView
            android:id="@+id/tvUpdateDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/block_seam_half"
            android:paddingTop="@dimen/block_seam"
            android:text="@{plant.FUpdate}"
            android:textStyle="bold"
            android:typeface="serif"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tvUpdateDateLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFunctionApplication"

            tool:text="2017/02/05" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
