<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="commonItem"
            type="com.cathay.banc.taipei.zoo.entity.CommonItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"

            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"

            app:layout_constraintGuide_percent="0.92" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingVertical="@dimen/block_seam"
            android:paddingLeft="@dimen/block_seam"
            android:paddingRight="@dimen/block_seam_half"
            android:src="@{commonItem.avatarUrl}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guidelineV1"
            app:layout_constraintTop_toTopOf="parent"

            tools:src="@drawable/cordova_ios_72" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="left|center_vertical"
            android:maxLines="1"
            android:paddingLeft="@dimen/block_seam_half"
            android:text="@{commonItem.title}"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"

            app:layout_constraintBottom_toTopOf="@id/tvDescription"
            app:layout_constraintLeft_toRightOf="@id/guidelineV1"
            app:layout_constraintRight_toLeftOf="@id/guidelineV2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="3"

            tools:text="@string/testing_title" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:paddingLeft="@dimen/block_seam_half"
            android:paddingRight="@dimen/block_seam"
            android:text="@{commonItem.description}"

            app:layout_constraintBottom_toTopOf="@id/tvInfo"
            app:layout_constraintLeft_toRightOf="@id/guidelineV1"
            app:layout_constraintRight_toLeftOf="@id/guidelineV2"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintVertical_weight="5"

            tools:text="@string/testing_description" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/block_seam_half"
            android:text="@{commonItem.info}"
            android:textColor="@android:color/holo_orange_dark"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guidelineV1"
            app:layout_constraintRight_toLeftOf="@id/guidelineV2"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintVertical_weight="2"

            tools:text="@string/testing_info" />

        <ImageView
            android:id="@+id/ivChevron"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/baseline_chevron_right_18"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintLeft_toRightOf="@id/guidelineV2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
